report_engine_email: handle case attachments are not defined on product (#2720)
Fix #11420

--- a/modules/report_engine_email/locale/fr.po
+++ b/modules/report_engine_email/locale/fr.po
@@ -8,6 +8,15 @@ msgstr "Email"
 
 msgctxt "error:report.template:"
 msgid ""
+"It seems that there is a configuration mismatch regarding attachments. "
+"Therefore, the email will be sent without attachments. Do you want to "
+"continue?"
+msgstr ""
+"Il semble y avoir une incompatibilité dans la configuration des pièces "
+"jointes. L'email sera envoyé sans pièces jointes, souhaitez-vous continuer?"
+
+msgctxt "error:report.template:"
+msgid ""
 "Split reports on email templates is recommended, you must be sure of your "
 "genshi fields"
 msgstr ""
