--- a/modules/report_engine_email/doc/en/CHANGELOG
+++ b/modules/report_engine_email/doc/en/CHANGELOG
@@ -1,4 +1,4 @@
-Version 2.4 - 2019-04-12
+* BUG#11420 Fix crash on email generation if attachment and the attachment report is not defined on product
 * BUG#11224 Fix crash when printing a mail with attachment due to erroneous encoding since python 3
 * BUG#11087 Fix crash when printing a mail with manual editing
 * BUG#10112 Add recipient email to printing context
