--- a/modules/report_engine_email/doc/fr/CHANGELOG
+++ b/modules/report_engine_email/doc/fr/CHANGELOG
@@ -1,4 +1,4 @@
-Version 2.4 - 2019-04-12
+* BUG#11420 Correction du plantage de la génération d'emails lorsque le modèle définissant la pièce jointe n'est pas défini sur le produit
 * BUG#11224 Correction d'un plantage lors de l'envoi d'un mail avec pièce jointe en raison d'un mauvais encodage en python 3
 * BUG#11087 Correctif de l'impression de courrier avec édition manuelle active
 * BUG#10112 Ajout de l'email sélectionné dans le contexte d'impression
