rule_engine: Add description field on rule engine object (#2761)
Fix #11543

--- a/modules/rule_engine/doc/en/CHANGELOG
+++ b/modules/rule_engine/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11543 Add description field on rule engine in order to fill a functionnal description of the algorithm
 * BUG#11550 Remove access right checks when creating rule engine execution logs
 
 Version 2.4 - 2019-04-12
