--- a/modules/rule_engine/locale/fr.po
+++ b/modules/rule_engine/locale/fr.po
@@ -31,16 +31,16 @@ msgid ""
 "The following keys will be removed from all existing data in the database, this may take some time:\n"
 "%(codes)s"
 msgstr ""
-"Toutes les occurences des clefs suivantes seront retirées de la base de "
-"données, cela peut prendre du temps:\n%(codes)s"
+"Toutes les occurences des clefs suivantes seront retirées de la base de données, cela peut prendre du temps:\n"
+"%(codes)s"
 
 msgctxt "error:rule_engine.rule_parameter:"
 msgid ""
 "The following keys will be renamed in all existing data in the database, this may take some time:\n"
 "%(codes)s"
 msgstr ""
-"Toutes les occurences des clefs suivantes seront renommées en base de "
-"données, cela peut prendre du temps:\n%(codes)s"
+"Toutes les occurences des clefs suivantes seront renommées en base de données, cela peut prendre du temps:\n"
+"%(codes)s"
 
 msgctxt "error:rule_engine.rule_parameter:"
 msgid "The parameter order must be unique accross a given rule"
@@ -186,6 +186,10 @@ msgstr "Arbre de Données"
 msgctxt "field:rule_engine,debug_mode:"
 msgid "Debug Mode"
 msgstr "Mode de debug"
+
+msgctxt "field:rule_engine,description:"
+msgid "Rule Description"
+msgstr "Description"
 
 msgctxt "field:rule_engine,exec_logs:"
 msgid "Execution Logs"
@@ -918,6 +922,10 @@ msgstr "Mis à jour par"
 msgctxt "field:tag,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
+
+msgctxt "help:rule_engine,description:"
+msgid "Functional description of the rule"
+msgstr "Description fonctionnelle de la règle"
 
 msgctxt "help:rule_engine.rule_parameter,selection:"
 msgid "A couple of key and label separated by \":\" per line"
