--- a/modules/rule_engine/doc/fr/CHANGELOG
+++ b/modules/rule_engine/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11543 Ajout d'un champ description sur une règle afin de renseigner une description fonctionnelle de l'algorithme.
 * BUG#11550 Levée de la vérification des droits lors de la création des logs d'exécution du moteur de règle
 
 Version 2.4 - 2019-04-12
