contract_insurance: fix duplicate error message (#2763)
Fix #0000

--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Fix overlap message error appearing as many times as there are covered elements independently of if they are all overlapping
 * OTH#9323 Hotfix: Use initial_start_date of covered element to check overlaps
 
 Version 2.4 - 2019-04-12
