--- a/modules/contract_insurance/doc/fr/CHANGELOG
+++ b/modules/contract_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Correction de l'apparition du message d'erreur de chevauchement au même nombre que les éléments couverts indépendamment de s'il y avait effectivement chevauchement pour tous
 * OTH#9323 Correctif: utilisation de inital_start_date sur covered_element pour la vérification des périodes de chevauchement
 
 Version 2.4 - 2019-04-12
