claim_underwriting: Fix crash when generating claim underwriting (#2755)
Fix #11531

--- a/modules/document/doc/en/CHANGELOG
+++ b/modules/document/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11531 Fix documents research according to the rights and the action
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
