--- a/modules/document/doc/fr/CHANGELOG
+++ b/modules/document/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11531 Correctif sur la recherche des documents en fonction des droits d'accès
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
