--- a/modules/contract_insurance_invoice/locale/fr.po
+++ b/modules/contract_insurance_invoice/locale/fr.po
@@ -472,6 +472,10 @@ msgctxt "field:contract.billing_information,payment_term:"
 msgid "Payment Term"
 msgstr "Condition de paiement"
 
+msgctxt "field:contract.billing_information,possible_payers:"
+msgid "Possible Payers"
+msgstr "Payeurs Possibles"
+
 msgctxt "field:contract.billing_information,possible_payment_terms:"
 msgid "Possible Payment Term"
 msgstr "Conditions de paiement offerts"
@@ -1120,6 +1124,14 @@ msgid ""
 msgstr ""
 "Si renseignée, aucune quittance ne sera générée avant cette date, et la "
 "première quittance commencera à cette date"
+
+msgctxt "help:contract.billing_information,payer:"
+msgid ""
+"You may set another payer if there is a payer"
+"relation between other party and the subscriber"
+msgstr ""
+"Vous pouvez changer le payeur s'il y a"
+"une relation de type payeur entre un tiers et le souscripteur"
 
 msgctxt "help:contract.payment_suspension,force_active:"
 msgid "Force the suspension status to active or inactive"
