--- a/modules/offered_life_clause/doc/en/CHANGELOG
+++ b/modules/offered_life_clause/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+OTH#0000 Add default in label in order to improve user understanding
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
