--- a/modules/offered_life_clause/doc/fr/CHANGELOG
+++ b/modules/offered_life_clause/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+OTH#0000 Ajout de défaut sur le champ clause par défaut pour une meilleure compréhension par l'utilisateur
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
