--- a/modules/contract_process/doc/en/CHANGELOG
+++ b/modules/contract_process/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11628 Payer field is not displayed at payment step in default life subscription process
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 * BUG#8725 Simplify depends management in subscription wizard
