account_invoice_slip: restore principal_lines attribute on invoice lines (#2775)
Fix #11338

--- a/modules/account_invoice_slip/doc/en/CHANGELOG
+++ b/modules/account_invoice_slip/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11338 Restore attribute principal_lines on invoice slip lines
+
 Version 2.4 - 2019-04-12
 * BUG#10790 Fix compatibility with account_per_product module
 * FEA#10638 Break claim_insurer / commission_insurer dependency
