--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11523 Manage void options in order to reactivate correctly void contrat
+
 Version 2.4 - 2019-04-12
 * BUG#11091 Add consistency check between a voided contract status and the status of its options
 * BUG#11154 Fix Quote Number Sequence property migration
