--- a/modules/product_cog/doc/fr/CHANGELOG
+++ b/modules/product_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11640 Correctif sur l'export / import des catégories comptables
+
 Version 2.4 - 2019-04-12
 * BUG#10173 Correctif de l'import - export des produits
 
