--- a/modules/endorsement_process/doc/fr/CHANGELOG
+++ b/modules/endorsement_process/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Hotfix d'un crash du client en raison de domain non respecté
+
 Version 2.4 - 2019-04-12
 * BUG#11274 Correction de l'accès concurrent dû au non rafrachissement du processus lorsqu'on exécute l'avenant suivant
 * FEA#11057 Ajout d'un assistant à exploiter dans le paramétrage permettant de choisir si l'on souhaite ou pas exécuter l'avenant suivant
