document_request: fix crash in view list due to computing wrong objects (#2788) (#2789)
Fix #11602

--- a/modules/document_request/doc/en/CHANGELOG
+++ b/modules/document_request/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11602 Enable document request creation from list view
+
 Version 2.4 - 2019-04-12
 * BUG#11130 Fix document request processing batch
 
