contract_insurance_invoice: Notify first paid invoice (#2791)
Fix #11656

--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11656 Add a dedicated event for the payment of the first invoice of a contract
 * FEA#11297 Make only related people with whom a subscriber have payer relation as possible contract payer
 
 Version 2.4 - 2019-04-12
