--- a/modules/contract_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11656 Ajout d'un événement déclenché au paiement de la première quittance d'un contrat
 * FEA#11297 Le payeur d'un contrat ne peut être que le souscripteur ou un autre tiers ayant une relation "payeur" avec le souscripteur
 
 Version 2.4 - 2019-04-12
