--- a/modules/contract_insurance/doc/fr/CHANGELOG
+++ b/modules/contract_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11141 Gérer la sélection des couvertures optionnelles au niveau contrat dans l'assistant de gestion des options
 * BUG#11036 Vérification des chevauchements sur les élements couverts ayant le même parent et la même personne
 * OTH#0000 Correction de l'apparition du message d'erreur de chevauchement au même nombre que les éléments couverts indépendamment de s'il y avait effectivement chevauchement pour tous
 * OTH#9323 Correctif: utilisation de inital_start_date sur covered_element pour la vérification des périodes de chevauchement
@@ -5,7 +6,6 @@
 Version 2.4 - 2019-04-12
 * BUG#11354 Correction d'un crash lors de la création d'une affiliation
 * BUG#11091 Ajout d'un check de cohérence entre le statut d'un contrat mis en effet et les statuts des options de ses élements couverts
-
 * FEA#10897 Vérification des chevauchements sur les dates des éléments couverts ne niveau 0 pour empêcher les doublons
 * BUG#10618 La liste des tiers d'un contract ne doit contenir qu'une seule fois un même tiers.
 * BUG#10418 La contrainte d'unicité sur les tiers des éléments couverts par contrat bloque certains cas métier
