--- a/modules/contract_insurance_suspension/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_suspension/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11586 La réactivation d'un contrat ayant des suspensions temporaires et définitive ne devrait mettre un terme qu'à la suspension définitive
+
 Version 2.4 - 2019-04-12
 * BUG#10857 Correction d'un crash lors de la désactivation d'une suspension
 * BUG#10046 Au moment de la désactivation d'une suspension, définir la fin d'une suspension temporaire comme le minimum entre aujourd'hui et la date calculée
