--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11623 Add identity management APIs
 * BUG#11657 Remove 'api' from test database names since it is automatically injected and break cache alignment with scenarios
 * FEA#11352 Allow to disable batch by configuration
 * BUG#11515 Fix _get_history_table
