questionnaire : Rename Questionnaire entry point (#2784)
Fix #11551

--- a/modules/questionnaire/doc/en/CHANGELOG
+++ b/modules/questionnaire/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11551 Rename Questionnaire entry point
+
 Version 2.4 - 2019-04-12
 * BUG#11410 Fix documentation files
 * FEA#9826 Module creation
