document_request_electronic_signature: Crash when generating a document (#2804)
Fix #11697

--- a/modules/document_request_electronic_signature/doc/fr/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11679 Correction d'un crash lors de la génération des documents
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 * Création du module
