--- a/modules/document_request_electronic_signature/doc/en/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11679 Crash when generating a document requesting electronic signature
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 * Module creation
